--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "def frcowvec_cat_conversion(lexeme):\n",
     "    old_cat = lexeme.split('_')[-1]\n",
-    "    new_cat = frcowvec_categories.get(old_cat)\n",
+    "    new_cat = frcowvec_categories.get(old_cat, old_cat)\n",
     "    return lexeme.split('_')[0] + '_' + str(new_cat)\n",
     "\n",
     "frequencies = pd.read_csv('frequencies-frcowvec.csv', header=0, index_col=0)\n",
