--- a/DG_3.ipynb
+++ b/DG_3.ipynb
@@ -7,18 +7,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
     "import codecs\n",
+    "import glob\n",
     "import networkx as nx\n",
+    "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
     "import pickle\n",
     "import re\n",
+    "from collections import Counter\n",
     "from difflib import SequenceMatcher\n",
+    "from numpy import dot\n",
+    "from numpy.linalg import norm\n",
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "from networkx.algorithms import isomorphism\n",
     "from networkx.drawing.nx_pydot import write_dot\n",
     "from utils import printProgressBar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d831297",
+   "metadata": {},
+   "source": [
+    "# 1. Excel"
    ]
   },
   {
@@ -41,13 +55,13 @@
    "source": [
     "frcowvec_categories = {'Nm': 'NOM', 'Nf': 'NOM', 'Nmp': 'NOM', 'Nfp': 'NOM', 'Nx': 'NOM', 'More': 'NOM',\n",
     "                       'Npm': 'NAM', 'Npf': 'NAM', 'Npx': 'NAM', 'Npmp': 'NAM', 'Npfp': 'NAM',\n",
-    "                       'Adj': 'ADJ', 'V': 'VER', 'Num': 'NUM', 'Pro': 'PRO', 'Adv': 'ADV'}\n",
+    "                       'IJ': 'INT', 'Adj': 'ADJ', 'V': 'VER', 'Num': 'NUM', 'Pro': 'PRO', 'Adv': 'ADV'}\n",
     "\n",
     "def get_frequency(lex_and_cat):\n",
     "    if '_' not in lex_and_cat:\n",
     "        return 0\n",
     "    old_cat = lex_and_cat.split('_')[-1]\n",
-    "    new_cat = frcowvec_categories.get(old_cat)\n",
+    "    new_cat = frcowvec_categories.get(old_cat, old_cat)\n",
     "    new_lex_and_cat = lex_and_cat.split('_')[0] + '_' + new_cat\n",
     "    try:\n",
     "        freq = frequencies.loc[new_lex_and_cat]['freq']\n",
@@ -295,6 +309,433 @@
    "outputs": [],
    "source": [
     "df_lattice.to_excel('DG-missing.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "081a494b",
+   "metadata": {},
+   "source": [
+    "# 2. Proposition of lexemes using Glawinette's patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "006625f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_dir = 'DG-graph-binary'\n",
+    "input_files = [f for f in listdir(binary_dir) if isfile(join(binary_dir, f))]\n",
+    "input_files.sort()\n",
+    "print(len(input_files), 'families')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e201b86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glawi_constructions = list()\n",
+    "with codecs.open('glawi-constructions.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        glawi_constructions.append(line.strip('\\n'))\n",
+    "\n",
+    "lexemes_in_demTable = set()\n",
+    "with codecs.open('lexemes.csv', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        elements = line.split('\\t')\n",
+    "        if elements[0] == 'lid':\n",
+    "            continue\n",
+    "        lexemes_in_demTable.add(elements[2])\n",
+    "print(len(lexemes_in_demTable), 'lexemes in Demonette\\'s table of lexemes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee873fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def match(pattern, word):  # pattern = 'preXisation', word = 'precognisation' => True\n",
+    "    if pattern == 'X':\n",
+    "        return True\n",
+    "    counter = 0\n",
+    "    try:\n",
+    "        for c in pattern:\n",
+    "            if c == 'X':\n",
+    "                break\n",
+    "            if c != word[counter]:\n",
+    "                return False\n",
+    "            counter += 1\n",
+    "        counter = -1\n",
+    "        while True:\n",
+    "            if pattern[counter] == 'X':\n",
+    "                break\n",
+    "            if pattern[counter] != word[counter]:\n",
+    "                return False\n",
+    "            counter -= 1\n",
+    "    except IndexError:  # Xtractif & actif\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "290e988b",
+   "metadata": {},
+   "source": [
+    "## 2.1. Generation of lexemes and their frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55d58a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cow_dict = dict()\n",
+    "with codecs.open('frequencies-frcowvec.csv', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if '_PUN' in line:\n",
+    "            continue\n",
+    "        elements = line.replace('\"', '').strip('\\n').split(',')\n",
+    "        if elements[-1] == 'freq':\n",
+    "            continue\n",
+    "        lexeme_and_cat = ','.join(elements[0:-1])\n",
+    "        lexeme = '_'.join(lexeme_and_cat.split('_')[0:-1])\n",
+    "        try:\n",
+    "            if cow_dict[lexeme] < int(elements[-1]):\n",
+    "                cow_dict[lexeme] = int(elements[-1])\n",
+    "        except KeyError:\n",
+    "            cow_dict[lexeme] = int(elements[-1])\n",
+    "print(len(cow_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de7078af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_lexemes_and_freq(nodes):\n",
+    "    return_list = list()\n",
+    "    existing_lexemes = set()\n",
+    "    generated = set()\n",
+    "    for n in nodes:\n",
+    "        existing_lexemes.add(n.split('_')[0])\n",
+    "    for lexeme in existing_lexemes:\n",
+    "        best_const_length = -1\n",
+    "        best_const = ''\n",
+    "        for c in glawi_constructions:\n",
+    "            const1 = c.split('-')[0]\n",
+    "            if len(const1) > best_const_length and match(const1, lexeme):\n",
+    "                best_const_length = len(const1)\n",
+    "                best_const = const1\n",
+    "        for c in glawi_constructions:\n",
+    "            [const1, const2] = c.split('-')\n",
+    "            if const1 != best_const:\n",
+    "                continue\n",
+    "            [prefix, postfix] = const1.split('X')\n",
+    "            stem = lexeme.replace(prefix, '', 1)\n",
+    "            if postfix:  # if not empty\n",
+    "                stem = ''.join(stem.rsplit(postfix, 1))\n",
+    "            new_lexeme = const2.replace('X', stem)\n",
+    "            if new_lexeme in generated or new_lexeme in existing_lexemes:\n",
+    "                continue\n",
+    "            if new_lexeme in lexemes_in_demTable and new_lexeme in cow_dict:\n",
+    "                return_list.append((new_lexeme, cow_dict.get(new_lexeme, 0)))\n",
+    "                generated.add(new_lexeme)\n",
+    "    return return_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9890c1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = codecs.open('DG_propositions_and_freq.txt', 'w', encoding='utf-8')\n",
+    "# counter_file = -1\n",
+    "proposed_lexemes = set()\n",
+    "for input_file in input_files:\n",
+    "    print(input_file, end='\\r')\n",
+    "#     counter_file += 1\n",
+    "#     if counter_file > 20:\n",
+    "#         break\n",
+    "    G = pickle.load(open(join(binary_dir, input_file), 'rb'))\n",
+    "    prop_and_freq = generate_lexemes_and_freq(G.nodes())\n",
+    "    prop_and_freq.sort(key=lambda x:x[1], reverse=True)\n",
+    "    output_file.write(input_file + '\\t' + str(prop_and_freq) + '\\n')\n",
+    "output_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ba2a55",
+   "metadata": {},
+   "source": [
+    "## 2.2. Generation of lexemes and their cosine similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97bfbfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lexemes_in_bow = set()\n",
+    "with codecs.open('lemma-A-pos-bow.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        lexeme = line.split()[0].split('_')[0]\n",
+    "        lexemes_in_bow.add(lexeme)\n",
+    "print(len(lexemes_in_bow), 'lexemes have distribution vectors')\n",
+    "\n",
+    "lexemes_in_demonette_families = set()\n",
+    "for file in input_files:\n",
+    "    G = pickle.load(open(join(binary_dir, file), 'rb'))\n",
+    "    for n in G.nodes():\n",
+    "        lexemes_in_demonette_families.add(n.split('_')[0])\n",
+    "print(len(lexemes_in_demonette_families), 'lexemes in Demonette')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a92d4e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_lexemes(nodes):\n",
+    "    return_set = set()\n",
+    "    existing_lexemes = set()\n",
+    "    for n in nodes:\n",
+    "        existing_lexemes.add(n.split('_')[0])\n",
+    "    for lexeme in existing_lexemes:\n",
+    "        best_const_length = -1\n",
+    "        best_const = ''\n",
+    "        for c in glawi_constructions:\n",
+    "            const1 = c.split('-')[0]\n",
+    "            if len(const1) > best_const_length and match(const1, lexeme):\n",
+    "                best_const_length = len(const1)\n",
+    "                best_const = const1\n",
+    "        for c in glawi_constructions:\n",
+    "            [const1, const2] = c.split('-')\n",
+    "            if const1 != best_const:\n",
+    "                continue\n",
+    "            [prefix, postfix] = const1.split('X')\n",
+    "            stem = lexeme.replace(prefix, '', 1)\n",
+    "            if postfix:  # if not empty\n",
+    "                stem = ''.join(stem.rsplit(postfix, 1))\n",
+    "            new_lexeme = const2.replace('X', stem)\n",
+    "            if new_lexeme in return_set or new_lexeme in existing_lexemes:\n",
+    "                continue\n",
+    "            if new_lexeme in lexemes_in_bow and new_lexeme in lexemes_in_demTable:\n",
+    "                return_set.add(new_lexeme)\n",
+    "    return return_set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "053ccfde",
+   "metadata": {},
+   "source": [
+    "### Generation of lexemes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd681ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = codecs.open('DG_propositions.txt', 'w', encoding='utf-8')\n",
+    "# counter_file = -1\n",
+    "proposed_lexemes = set()\n",
+    "for input_file in input_files:\n",
+    "    print(input_file, end='\\r')\n",
+    "#     counter_file += 1\n",
+    "#     if counter_file < 82:\n",
+    "#         continue\n",
+    "    G = pickle.load(open(join(binary_dir, input_file), 'rb'))\n",
+    "    propositions = generate_lexemes(G.nodes())\n",
+    "    proposed_lexemes.update(propositions)\n",
+    "    output_file.write(input_file + '\\t' + str(propositions) + '\\n')\n",
+    "output_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf8cca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(proposed_lexemes), 'new lexemes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f3bb7ca",
+   "metadata": {},
+   "source": [
+    "### Calculation of max and avg of cosine similarity for each family"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42768a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_dict = dict()\n",
+    "counter = 0\n",
+    "with codecs.open('lemma-A-pos-bow.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        lexeme = line.split()[0].split('_')[0]\n",
+    "        if lexeme in lexemes_in_demonette_families: #  or lexeme in proposed_lexemes:\n",
+    "            v = np.array(list(map(lambda x: float(x), line.split()[1:])))\n",
+    "            vector_dict[lexeme] = v\n",
+    "        print(counter, end='\\r')\n",
+    "        counter += 1\n",
+    "print(counter, 'vectors in bow')\n",
+    "print(len(vector_dict), 'vectors kept')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b3fd7d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = codecs.open('DG_family_cosine.txt', 'w', encoding='utf-8')\n",
+    "output_file.write('familyID\\tmax_cosine\\tavg_cosine\\tlexemes\\n')\n",
+    "for file in input_files:\n",
+    "    G = pickle.load(open(join(binary_dir, file), 'rb'))\n",
+    "    max_cos = -3\n",
+    "    comparison_counter = 0\n",
+    "    total_cosine = 0\n",
+    "    nodes = list(G.nodes())\n",
+    "    for n1 in range(0, len(nodes) - 1):\n",
+    "        for n2 in range(n1 + 1, len(nodes) - 1):\n",
+    "            try:\n",
+    "                lex1 = nodes[n1].split('_')[0]\n",
+    "                lex2 = nodes[n2].split('_')[0]\n",
+    "                if lex1 == lex2:\n",
+    "                    continue\n",
+    "                vec1 = vector_dict[lex1]\n",
+    "                vec2 = vector_dict[lex2]\n",
+    "                cosine_similarity = dot(vec1, vec2)/(norm(vec1)*norm(vec2))\n",
+    "                if cosine_similarity > max_cos:\n",
+    "                    max_cos = cosine_similarity\n",
+    "                total_cosine += cosine_similarity\n",
+    "                comparison_counter += 1\n",
+    "            except KeyError:\n",
+    "                pass\n",
+    "    if comparison_counter == 0:\n",
+    "        output_file.write(file + '\\t?\\t0\\t' + str(nodes) + '\\n')\n",
+    "    else:\n",
+    "        output_file.write(file + '\\t' + str(round(max_cos, 2)) + '\\t' + str(round(total_cosine/comparison_counter, 2))\\\n",
+    "                      + '\\t' + str(nodes) + '\\n')\n",
+    "    print(file, end='\\r')\n",
+    "output_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4396d8b",
+   "metadata": {},
+   "source": [
+    "### Calculation of cosine similarity for each new lexeme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6990c0d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proposed_lexemes = set()\n",
+    "with codecs.open('DG_propositions.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        elements = line.split('\\t')\n",
+    "        propositions = eval(elements[1])\n",
+    "        proposed_lexemes.update(propositions)\n",
+    "        print(elements[0], end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ab77c52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_dict = dict()\n",
+    "counter = 0\n",
+    "with codecs.open('lemma-A-pos-bow.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        lexeme = line.split()[0].split('_')[0]\n",
+    "        if lexeme in lexemes_in_demonette_families or lexeme in proposed_lexemes:\n",
+    "            v = np.array(list(map(lambda x: float(x), line.split()[1:])))\n",
+    "            vector_dict[lexeme] = v\n",
+    "        print(counter, end='\\r')\n",
+    "        counter += 1\n",
+    "print(counter, 'vectors in bow')\n",
+    "print(len(vector_dict), 'vectors kept')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ec5ee85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = codecs.open('DG_propositions_and_cosine.txt', 'w', encoding='utf-8')\n",
+    "with codecs.open('DG_propositions.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        elements = line.split('\\t')\n",
+    "        output_file.write(elements[0] + '\\t')\n",
+    "        propositions = eval(elements[1])\n",
+    "        prop_and_cos = list()\n",
+    "        for p in propositions:\n",
+    "            total_cos = 0\n",
+    "            count_cos = 0\n",
+    "            max_cos = -2\n",
+    "            vec1 = vector_dict[p]\n",
+    "            G = pickle.load(open(join(binary_dir, elements[0]), 'rb'))\n",
+    "            for n in G.nodes():\n",
+    "                try:\n",
+    "                    vec2 = vector_dict[n.split('_')[0]]\n",
+    "                    cosine_similarity = dot(vec1, vec2)/(norm(vec1)*norm(vec2))\n",
+    "                    if cosine_similarity > max_cos:\n",
+    "                        max_cos = cosine_similarity\n",
+    "                    total_cos += cosine_similarity\n",
+    "                    count_cos += 1\n",
+    "                except KeyError:\n",
+    "                    pass\n",
+    "            if count_cos == 0:\n",
+    "                prop_and_cos.append((p, 0, 0))\n",
+    "            else:\n",
+    "                prop_and_cos.append((p, round(max_cos, 2), round(total_cos/count_cos, 2)))\n",
+    "        if len(prop_and_cos) > 0:\n",
+    "            prop_and_cos.sort(key=lambda x:x[1], reverse=True)\n",
+    "        output_file.write(str(prop_and_cos) + '\\n')\n",
+    "        print(elements[0], end='\\r')\n",
+    "output_file.close()"
    ]
   }
  ],
